# data-structures_and_algorithms

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  pyproject.toml
src/main/algo/dp/: Fibonacci.java  README.md
src/main/algo/search/: README.md
src/main/algo/sort/: README.md
src/main/benchmarks/: linear_search.py  merge_sort.py  quicksort_strings.py
src/main/benchmarks/names/: txt_to_list.py
src/main/benchmarks/numbers/: 5.txt
src/main/cpp/: hello.cpp
src/main/dp/: Fibonacci.java
src/main/ds/: arrays.py
src/main/ds/array/: README.md
src/main/ds/graph/: HasPath.java  README.md  Traversal.java  hasPath.js  traversal.js  undirectedPath.js
src/main/ds/hashing/: IndexMapping.java  README.md
src/main/ds/linkedlist/: HelperLLClass.java  README.md  ReverseSLL.java
src/main/ds/stack/: README.md  ReverseStack.java  Stack.java  StackLL.java
src/main/ds/tree/: BinaryTree.java  README.md
src/main/java/: BinarySearch.java  Hello.java  LinearSearch.java  RecursiveBinarySearch.java
src/main/java/ds/: SinglyLinkedList.java
src/main/maths/: CountTrailingZeroes.java  README.md
src/main/python/: binary_search.py  linear_search.py  linked_list_merge_sort.py  recursive_binary_search.py
src/main/python/ds/: doubly_linked_list.py  linked_list.py  singly_linked_list.py
src/questions/CenturyFromYear/: CenturyFromYear.java
src/questions/CheckPalindrome/: CheckPalindrome.java  README.md
src/questions/FindFirstDuplicateArray/: FirstDuplicate.java  firstDuplicate.js
src/questions/codesignal/: README.md
src/questions/leetcode/: README.md
(+90 files in other folders)
